{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 4,
  "lineage": "93c1befa-0661-3844-d9e8-e63d94727498",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "mtc_node",
      "provider": "module.compute.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0950bf7d28f290092",
            "arn": "arn:aws:ec2:ap-southeast-1:279863352558:instance/i-0390784e6edac61de",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0390784e6edac61de",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mtckey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b2d3e68e93465667",
            "private_dns": "ip-10-124-1-146.ap-southeast-1.compute.internal",
            "private_ip": "10.124.1.146",
            "public_dns": "ec2-13-212-82-174.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.212.82.174",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c6347ab1cd1b206d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e34f58f3a823e1dc",
            "tags": {
              "Name": "mtc_node-9947"
            },
            "tags_all": {
              "Name": "mtc_node-9947"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01db300b31bd5c5b9"
            ]
          },
          "dependencies": [
            "module.compute.aws_key_pair.mtc_auth",
            "module.compute.data.aws_ami.server_ami",
            "module.compute.random_id.mtc_node_id",
            "module.networking.aws_security_group.mtc_sg",
            "module.networking.aws_subnet.mtc_public_subnet",
            "module.networking.aws_vpc.mtc_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_integer.random",
            "module.networking.random_shuffle.public_az"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "mtc_private_rt",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:279863352558:route-table/rtb-096bd72840828277d",
            "default_route_table_id": "rtb-096bd72840828277d",
            "id": "rtb-096bd72840828277d",
            "owner_id": "279863352558",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "mtc_private"
            },
            "tags_all": {
              "Name": "mtc_private"
            },
            "timeouts": null,
            "vpc_id": "vpc-09f80bc6c11f76cef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.mtc_vpc",
            "module.networking.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "mtc_internet_gateway",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:279863352558:internet-gateway/igw-04ef372cba472e424",
            "id": "igw-04ef372cba472e424",
            "owner_id": "279863352558",
            "tags": {
              "Name": "mtc_igw"
            },
            "tags_all": {
              "Name": "mtc_igw"
            },
            "vpc_id": "vpc-09f80bc6c11f76cef"
          },
          "dependencies": [
            "module.networking.aws_vpc.mtc_vpc",
            "module.networking.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "default_route",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04ef372cba472e424",
            "id": "r-rtb-049fa69a5afa7737f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-049fa69a5afa7737f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.mtc_internet_gateway",
            "module.networking.aws_route_table.mtc_public_rt",
            "module.networking.aws_vpc.mtc_vpc",
            "module.networking.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "mtc_public_rt",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:279863352558:route-table/rtb-049fa69a5afa7737f",
            "id": "rtb-049fa69a5afa7737f",
            "owner_id": "279863352558",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "mtc_public"
            },
            "tags_all": {
              "Name": "mtc_public"
            },
            "timeouts": null,
            "vpc_id": "vpc-09f80bc6c11f76cef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.mtc_vpc",
            "module.networking.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mtc_public_assoc",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06867f7770df741f2",
            "route_table_id": "rtb-049fa69a5afa7737f",
            "subnet_id": "subnet-0e34f58f3a823e1dc"
          },
          "dependencies": [
            "module.networking.aws_route_table.mtc_public_rt",
            "module.networking.aws_subnet.mtc_public_subnet",
            "module.networking.aws_vpc.mtc_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_integer.random",
            "module.networking.random_shuffle.public_az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f1d6de647ecde40",
            "route_table_id": "rtb-049fa69a5afa7737f",
            "subnet_id": "subnet-00a745fdddab1d5a3"
          },
          "dependencies": [
            "module.networking.aws_route_table.mtc_public_rt",
            "module.networking.aws_subnet.mtc_public_subnet",
            "module.networking.aws_vpc.mtc_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_integer.random",
            "module.networking.random_shuffle.public_az"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mtc_sg",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:279863352558:security-group/sg-01db300b31bd5c5b9",
            "description": "public access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01db300b31bd5c5b9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "public_sg",
            "name_prefix": "",
            "owner_id": "279863352558",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09f80bc6c11f76cef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.mtc_vpc",
            "module.networking.random_integer.random"
          ]
        },
        {
          "index_key": "rds",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:279863352558:security-group/sg-09795b270be0db49f",
            "description": "rds access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09795b270be0db49f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.123.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds_sg",
            "name_prefix": "",
            "owner_id": "279863352558",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09f80bc6c11f76cef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.mtc_vpc",
            "module.networking.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mtc_private_subnet",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:279863352558:subnet/subnet-001dee4ae23848f6a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.124.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-001dee4ae23848f6a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "279863352558",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mtc_private_1"
            },
            "tags_all": {
              "Name": "mtc_private_1"
            },
            "vpc_id": "vpc-09f80bc6c11f76cef"
          },
          "dependencies": [
            "module.networking.aws_vpc.mtc_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_integer.random",
            "module.networking.random_shuffle.public_az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:279863352558:subnet/subnet-0ab8d1e31990ee102",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.124.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ab8d1e31990ee102",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "279863352558",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mtc_private_2"
            },
            "tags_all": {
              "Name": "mtc_private_2"
            },
            "vpc_id": "vpc-09f80bc6c11f76cef"
          },
          "dependencies": [
            "module.networking.aws_vpc.mtc_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_integer.random",
            "module.networking.random_shuffle.public_az"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:279863352558:subnet/subnet-00b668d8431924795",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.124.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00b668d8431924795",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "279863352558",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mtc_private_3"
            },
            "tags_all": {
              "Name": "mtc_private_3"
            },
            "vpc_id": "vpc-09f80bc6c11f76cef"
          },
          "dependencies": [
            "module.networking.aws_vpc.mtc_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_integer.random",
            "module.networking.random_shuffle.public_az"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mtc_public_subnet",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:279863352558:subnet/subnet-0e34f58f3a823e1dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.124.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e34f58f3a823e1dc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "279863352558",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mtc_public_1"
            },
            "tags_all": {
              "Name": "mtc_public_1"
            },
            "vpc_id": "vpc-09f80bc6c11f76cef"
          },
          "dependencies": [
            "module.networking.aws_vpc.mtc_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_integer.random",
            "module.networking.random_shuffle.public_az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:279863352558:subnet/subnet-00a745fdddab1d5a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.124.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a745fdddab1d5a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "279863352558",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mtc_public_2"
            },
            "tags_all": {
              "Name": "mtc_public_2"
            },
            "vpc_id": "vpc-09f80bc6c11f76cef"
          },
          "dependencies": [
            "module.networking.aws_vpc.mtc_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_integer.random",
            "module.networking.random_shuffle.public_az"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mtc_vpc",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:279863352558:vpc/vpc-09f80bc6c11f76cef",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.124.0.0/16",
            "default_network_acl_id": "acl-00c51e4c65e83e201",
            "default_route_table_id": "rtb-096bd72840828277d",
            "default_security_group_id": "sg-0e395b1f97a51377d",
            "dhcp_options_id": "dopt-0c7e87bdb80793cd9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09f80bc6c11f76cef",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-096bd72840828277d",
            "owner_id": "279863352558",
            "tags": {
              "Name": "mtc_vpc-97"
            },
            "tags_all": {
              "Name": "mtc_vpc-97"
            }
          },
          "dependencies": [
            "module.networking.random_integer.random"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}